     - -show_mismatch option now takes following arguments: 0 (false), "always", "base level" (draw only
       when DNA is in view), or a number, in which case mismatches will only be drawn when the length
       of the window is <= that number. For compatibility, a value of "1" is the same as "base level."
     - Fixed display of protein sequence in genes when -draw_protein is true.

2.02 Sun Mar 14 18:44:04 EDT 2010
     - Added a wiggle_whiskers glyph that works nicely with BigWig and
       BigBed data.
     - Fixed processed_transcript (and gene) glyphs so that thin UTRs are more attractive.
     - Fixed the behavior of transcript arrows to be more customizable and not to get
       too large.
     - Segments glyph now shows mismatches when zoomed out and -show_mismatches is true.
     - Added an -indel_color option to segments glyph to show indels in a different color
       from simple nucleotide substitutions.
     - Added a -mismatch_only option to segments glyph that only shows mismatching base
       pairs when zoomed in.

2.01 Thu Feb 25 16:46:08 EST 2010
     - Fixed display of alignments that have hard-clipping in their CIGAR strings.

2.00 Wed Jan 20 11:12:13 EST 2010
     - Added the "cross" glyph for DAS compatibility.
     - Fixed the triangle glyph so that DAS stylesheets can set orientation
       properly.	
     - Fixed wiggle_xyplot/density documentation of smoothing options.  
     - Turn off sampling from wiggle loader by default (turn it on with --sample option).
     - Multiple sequence alignment code in the segments glyph has been updated to deal with
       the Samtools case of both reference DNA and target reporting minus strand alignments.
     - It felt like time to go to 2.00.

1.995 Wed Jan  6 10:06:17 EST 2010
      - Fixed the gene glyph so that non-SO genes (gene=>exon without an intervening transcript)
        display properly. Otherwise the exons were bumping.